# agentic_runtime

./: .gitignore  BRANCH_CONTEXT.md  HANDOFF_PLAN2.md  PLAN_CAPABILITIES_SKILLS_MCP.md  PLAN_COMPLEMENTARIO_RUNTIME.md  PLAN_DOCS_RUNTIME.md  PLAN_RUNTIME_AGENTICO.md  pyproject.toml
src/HOMOLOGATION/: 01-contracts.md  02-loop.md  03-context.md  04-modes.md  05-execution.md  06-hooks.md  07-events.md  08-signals.md  09-tools-infra.md  10-tools-native.md  11-cap-mcp.md  12-cap-skills.md  13-cap-memory.md  14-cap-plan.md  15-storage.md  16-models.md  17-voice.md  18-factory.md  DEUDA-B-transversal.md  PROGRESS.md  README.md
src/HOMOLOGATION/learned_lessons/: 00-falsa-economia-del-rigor.md  01-exhaustividad-lectura-integra.md  02-prohibido-descartar-sin-abrir.md  03-ledger-honesto-y-puerta-de-cierre.md  04-mostrar-los-resumenes-al-usuario.md  05-remediacion-desarrollada-no-diferida.md  06-sin-coautoria-de-claude.md  07-fuera-de-alcance-no-es-trocear.md  08-superficialidad-en-el-archivo-mas-grande.md  09-verificar-completitud-no-confirmar-doc.md  README.md
src/agentic_runtime/: __init__.py  factory.py
src/agentic_runtime/capabilities/: __init__.py  contracts.py  manager.py  protocol.py  resolver.py
src/agentic_runtime/capabilities/mcp/: __init__.py  auth.py  client.py  config.py  config_store.py  provider.py  reconcile.py  resource_tools.py  scope.py  state.py  token_storage.py  tool_adapter.py
src/agentic_runtime/capabilities/memory/: __init__.py  prompt.py  provider.py  recall.py  store.py
src/agentic_runtime/capabilities/plan/: __init__.py  plan_file.py  provider.py
src/agentic_runtime/capabilities/skills/: __init__.py  commands.py  frontmatter.py  loader.py  provider.py  skill_tool.py  state.py  store.py
src/agentic_runtime/context/: __init__.py  adapters.py  execution.py  presentation.py  tool_use.py
src/agentic_runtime/contracts/: __init__.py  compaction.py  permissions.py  runtime.py  storage.py  user_input.py
src/agentic_runtime/events/: __init__.py  bus.py  event_types.py  protocol.py
src/agentic_runtime/execution/: __init__.py  agents.py  runner.py
src/agentic_runtime/execution/context/: agent_context.py
src/agentic_runtime/execution/fork/: __init__.py
src/agentic_runtime/execution/local/: __init__.py  notification.py  runtime.py  summarizer.py
src/agentic_runtime/execution/observer/: __init__.py  events.py  observer.py
src/agentic_runtime/execution/session/: __init__.py  protocol.py  session.py
src/agentic_runtime/execution/tasks/: __init__.py  registry.py  status.py
src/agentic_runtime/hooks/: __init__.py  protocol.py  runner.py
src/agentic_runtime/loop/: __init__.py  agent_loop.py  basic.py  factory.py  protocol.py
src/agentic_runtime/models/: __init__.py  caller.py  protocol.py
src/agentic_runtime/modes/: __init__.py  manager.py  protocols.py
src/agentic_runtime/scripts/: e2e_runtime_test.py
src/agentic_runtime/signals/: __init__.py  bus.py  protocols.py
src/agentic_runtime/storage/: __init__.py  factory.py  filesystem.py  protocol.py
src/agentic_runtime/tests/: _azure_real.py  _mcp_echo_server.py  pytest.ini  test_agent_loop.py  test_ask_user.py  test_background_notification_channel.py  test_background_result_summary.py  test_basic_loop.py  test_caller_model_per_request.py  test_caller_native_tool_search.py  test_caller_system_override.py  test_cap_mcp_homologation.py  test_cap_plan_homologation.py  test_cap_skills_homologation.py  test_capabilities_resolver.py  test_capability_manager.py  test_capability_persistence.py  test_capability_registration_e2e.py  test_capability_systemprompt_and_recall.py  test_capability_wiring.py  test_clone_repository.py  test_context_homologation.py  test_context_identity.py  test_contracts_homologation.py  test_deferred_delta.py  test_deferred_loading.py  test_deferred_strategy.py  test_enter_plan_mode_guard.py  test_events.py  test_events_homologation.py  test_exec_env.py  test_execution_context.py  test_execution_homologation.py  test_factory_homologation.py  test_fork_primitives.py  test_fs_confinement.py  test_grep_glob_caps.py  test_hooks.py  test_hooks_homologation.py  test_loop_homologation.py  (+50 more)
src/agentic_runtime/tools/: __init__.py  deferred.py  deferred_delta.py  deferred_strategy.py  dispatcher.py  exec_env.py  factory.py  fs_env.py  native_registry.py  pool.py  protocol.py  registry.py
src/agentic_runtime/tools/native/: __init__.py  agent.py  ask_user.py  bash.py  clone_repository.py  config.py  file_edit.py  glob_tool.py  grep_tool.py  plan_mode.py  read_file.py  sleep.py  task_tools.py  todo_write.py  tool_search.py  web_fetch.py  web_search.py  worktree.py  write_file.py
src/agentic_runtime/voice/: __init__.py  protocol.py
