[project]
name = "agentic-runtime"
version = "0.1.0"
description = "Generic agentic loop runtime primitives"
requires-python = ">=3.12"
dependencies = [
    "agentic-models",
    "openai>=2.29.0",
    "mcp>=1.26.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
# Dependencias de las SKILLS de oficina (docx/xlsx) que ejercita el E2E real de
# ejecución en el loop. NO son del runtime: son las `deps` que el integrador
# provee para esas skills concretas. Aisladas en su propio grupo para dejar
# explícito que el runtime no depende de ellas — solo el test que las corre.
skills-e2e = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic_runtime*"]

[tool.uv.sources]
agentic-models = { path = "../agentic_models", editable = true }
